feat: use logotype on inner pages (resolves #62) (#63)
* feat: use logotype on inner pages (resolves #62)

* feat: implement new focus states for logo

* fix: responsive logotype

* fix: simplify and improve responsive styles

--- a/src/_includes/partials/components/brand.njk
+++ b/src/_includes/partials/components/brand.njk
@@ -1,4 +1,13 @@
 <a class="brand" rel="home" href="/">
-    {% include "svg/logo.svg" %}
+    {% if page.url === '/' %}
+        {% include "svg/logo.svg" %}
+    {% else %}
+        <span class="brand__logo">
+        {% include "svg/logo.svg" %}
+        </span>
+        <span class="brand__logotype">
+        {% include "svg/logo-wordmark.svg" %}
+        </span>
+    {% endif %}
     <span class="sr-only">Inclusive Design Research Centre</span>
 </a>
