--- a/src/scss/components/_brand.scss
+++ b/src/scss/components/_brand.scss
@@ -1,18 +1,91 @@
 .brand {
   color: inherit;
+  height: 5rem;
+  margin-left: -1.125rem;
+  padding-top: 0.75rem;
+  width: 4.5rem;
   z-index: 20;
+
+  &:hover,
+  &:focus {
+    background: black;
+    color: var(--white);
+  }
+
+  &:active {
+    background: transparentize(black, 0.3);
+  }
 }
 
-.brand:hover,
-.brand:focus {
-  background: var(--header-accent, var(--accent, $yellow-500));
-}
-
-.home .brand {
-  color: $logo;
+@media (min-width: 768px) {
+  .brand {
+    width: 14.5rem;
+  }
 }
 
 .brand svg {
   fill: currentColor;
+  margin-left: 1.125rem;
   width: 2.5rem;
+}
+
+.brand .brand__logo svg {
+  display: inline;
+  width: 2.5rem;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.brand .brand__logotype svg {
+  display: none;
+  width: 12.45689655rem;
+
+  @media (min-width: 768px) {
+    display: inline;
+  }
+}
+
+.page--home {
+  .brand {
+    color: $logo;
+    width: 4.5rem;
+
+    &:hover,
+    &:focus {
+      background: $logo;
+      color: var(--white);
+    }
+
+    &:active {
+      background: transparentize($logo, 0.3);
+    }
+  }
+
+  .brand__logo {
+    display: inline;
+  }
+
+  .brand__logotype {
+    display: none;
+  }
+}
+
+.banner--menu-visible,
+.page--home .banner--menu-visible {
+  .brand {
+    color: var(--white);
+
+    &:hover,
+    &:focus {
+      background: var(--white);
+      color: var(--indigo-900);
+    }
+
+    &:active {
+      background: var(--indigo-1000);
+      color: var(--white);
+    }
+  }
 }
