feat: introduce responsive type, standardize type scale and colors
Resolves #40.

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 // This file contains all application-wide Sass variables.
 // -----------------------------------------------------------------------------
 
+$true-black: #000;
 $black: #00303f;
 $white: #fff;
 $silver: #c4c4c4;
@@ -19,6 +20,7 @@ $yellow-200: #faf089;
 $yellow-500: #f6e05e;
 
 $colors: (
+  'true-black': $true-black,
   'black': $black,
   'white': $white,
   'silver': $silver,
@@ -40,8 +42,28 @@ $colors: (
   @each $name, $color in $colors {
     --#{$name}: #{$color};
   }
-}
 
-$font-sans: 'Open Sans', sans-serif;
-$font-display: 'Work Sans', sans-serif;
-$font-serif: 'Merriweather', serif;
+  // Fonts
+  --ff-sans: 'Open Sans', sans-serif;
+  --ff-display: 'Work Sans', sans-serif;
+  --ff-serif: 'Merriweather', serif;
+
+  // Font Weights
+  --fw-normal: 400;
+  --fw-medium: 500;
+  --fw-semibold: 600;
+  --fw-bold: 700;
+  --fw-black: 900;
+
+  // Type Scale
+  --step--1: calc(14 / 16 * 1rem);
+  --step-0: 1rem;
+  --step-1: calc(18 / 16 * 1rem);
+  --step-2: calc(22 / 16 * 1rem);
+  --step-3: calc(24 / 16 * 1rem);
+  --step-4: calc(28 / 16 * 1rem);
+  --step-5: calc(32 / 16 * 1rem);
+  --step-6: calc(42 / 16 * 1rem);
+  --step-7: calc(44 / 16 * 1rem);
+  --step-8: calc(62 / 16 * 1rem);
+}
