--- a/src/scss/pages/_team.scss
+++ b/src/scss/pages/_team.scss
@@ -26,7 +26,7 @@ article.person {
   display: inline-flex;
   flex-direction: row;
   font-size: 0.875rem;
-  font-weight: 600;
+  font-weight: var(--fw-semibold);
   text-decoration: none;
 }
 
