--- a/src/_includes/partials/components/navigation.njk
+++ b/src/_includes/partials/components/navigation.njk
@@ -2,7 +2,7 @@
     {% set navItems = collections.all | eleventyNavigation %}
     <button class="menu-toggle" id="menu-toggle" aria-expanded="false">{% include 'svg/menu.svg' %} menu</button>
     <div class="menu">
-        <p class="menu-label" id="menu-label"><span class="sr-only">main </span>Menu</p>
+        <p class="menu-label h1" id="menu-label"><span class="sr-only">main </span>Menu</p>
         <ul>
         {%- for entry in navItems %}
 	        {% set liClass, currentAttribute, relAttribute, parentAttribute = '' %}
