--- a/src/scss/components/_image.scss
+++ b/src/scss/components/_image.scss
@@ -1,7 +1,7 @@
 figcaption {
   color: #4f4f4f;
-  font-family: $font-sans;
-  font-size: 0.875rem;
+  font-family: var(--ff-sans);
+  font-size: var(--step--1);
   font-style: italic;
   margin-top: 0.625rem;
   text-align: center;
