--- a/src/scss/pages/_404.scss
+++ b/src/scss/pages/_404.scss
@@ -2,17 +2,17 @@
 // This file contains styles that are specific to the 404 page.
 // -----------------------------------------------------------------------------
 .page--404 {
-  background: $indigo-900;
-  color: $white;
+  background: var(--indigo-900);
+  color: var(--white);
 }
 
 .page--404 a {
-  text-decoration-color: $indigo-500;
+  text-decoration-color: var(--indigo-500);
 }
 
 .page--404 a:hover,
 .page--404 a:focus {
-  background: $indigo-500;
+  background: var(--indigo-500);
 }
 
 .page--404 article {
