--- a/src/scss/pages/_projects-tools.scss
+++ b/src/scss/pages/_projects-tools.scss
@@ -1,5 +1,5 @@
 .page--projects-and-tools .hr {
-  border-bottom-color: $indigo-500;
+  border-bottom-color: var(--indigo-500);
 }
 
 .page--projects-and-tools .project,
