feat: add React-based preview for people

--- a/src/_includes/layouts/single--person.njk
+++ b/src/_includes/layouts/single--person.njk
@@ -34,7 +34,7 @@
                 {% if website %}
                 <tr>
                     <th>Website</th>
-                    <td><a href="{{ website }}">{{ website }}</a></td>
+                    <td><a href="{{ website }}">{{ website | replace('https://', '') | replace('http://', '') }}</a></td>
                 </tr>
                 {% endif %}
                 {% if twitter %}
