--- a/src/_includes/layouts/projects.njk
+++ b/src/_includes/layouts/projects.njk
@@ -1,4 +1,8 @@
-{% extends 'layouts/base.njk' %}
+{% if previewMode %}
+    {% extends 'layouts/preview.njk' %}
+{% else %}
+    {% extends 'layouts/base.njk' %}
+{% endif %}
 
 {% set pageType = 'page--projects-and-tools' %}
 
