--- a/src/_includes/layouts/single--person.njk
+++ b/src/_includes/layouts/single--person.njk
@@ -1,4 +1,8 @@
-{% extends 'layouts/base.njk' %}
+{% if previewMode %}
+    {% extends 'layouts/preview.njk' %}
+{% else %}
+    {% extends 'layouts/base.njk' %}
+{% endif %}
 
 {% set pageType = 'single single--person' %}
 {% set postType = 'Team' %}
