--- a/src/_includes/layouts/single.njk
+++ b/src/_includes/layouts/single.njk
@@ -1,4 +1,8 @@
-{% extends 'layouts/base.njk' %}
+{% if previewMode %}
+    {% extends 'layouts/preview.njk' %}
+{% else %}
+    {% extends 'layouts/base.njk' %}
+{% endif %}
 
 {% block content %}
     <article class="container">
