feat: add minimal preview template (resolves #58) (#67)
* feat: minimal previews for news and ideas

* feat: add preview for people

* feat: add date to news and idea previews

* feat: add React-based preview for people

* feat: add preview template wrapper

* feat: compile templates for previews using Eleventy

* fix: address lint error

--- a/src/_includes/layouts/single--person.njk
+++ b/src/_includes/layouts/single--person.njk
@@ -1,4 +1,8 @@
-{% extends 'layouts/base.njk' %}
+{% if previewMode %}
+    {% extends 'layouts/preview.njk' %}
+{% else %}
+    {% extends 'layouts/base.njk' %}
+{% endif %}
 
 {% set pageType = 'single single--person' %}
 {% set postType = 'Team' %}
@@ -34,7 +38,7 @@
                 {% if website %}
                 <tr>
                     <th>Website</th>
-                    <td><a href="{{ website }}">{{ website }}</a></td>
+                    <td><a href="{{ website }}">{{ website | replace('https://', '') | replace('http://', '') }}</a></td>
                 </tr>
                 {% endif %}
                 {% if twitter %}
