--- a/src/scss/pages/_generic.scss
+++ b/src/scss/pages/_generic.scss
@@ -62,6 +62,10 @@ article header .intro {
 article .content .inner {
   max-width: 100%;
   padding: 0 1.5rem;
+
+  div + p {
+    margin-top: 1.5rem;
+  }
 }
 
 .hr {
