feat: add history page (resolves #56)

--- a/src/scss/idrc.scss
+++ b/src/scss/idrc.scss
@@ -38,6 +38,7 @@
 @import
   'pages/generic',
   'pages/home',
+  'pages/history',
   'pages/projects-tools',
   'pages/news-ideas',
   'pages/single',
