--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -89,7 +89,7 @@ blockquote {
   }
 
   ul li::before {
-    background-color: var(--silver);
+    background-color: var(--grey-100);
     border-radius: 50%;
     content: "";
     display: inline-block;
