feat: add secondary navigation (resolves #61)

--- a/src/_includes/layouts/page--team.njk
+++ b/src/_includes/layouts/page--team.njk
@@ -18,5 +18,9 @@
                 </div>
             </div>
         </div>
+
+        {% if secondaryNavigation %}
+        {% include 'partials/components/secondary-navigation.njk' %}
+        {% endif %}
     </article>
 {% endblock %}
