--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $white: #fff;
 $silver: #c4c4c4;
 $indigo-100: #f8fbff;
 $indigo-200: #e2edfc;
+$indigo-400: #5a67d8;
 $indigo-500: #3544d0;
 $indigo-900: #3c366b;
 $indigo-1000: #251f50;
@@ -26,6 +27,7 @@ $colors: (
   'silver': $silver,
   'indigo-100': $indigo-100,
   'indigo-200': $indigo-200,
+  'indigo-400': $indigo-400,
   'indigo-500': $indigo-500,
   'indigo-900': $indigo-900,
   'indigo-1000': $indigo-1000,
