--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -60,5 +60,8 @@
             </div>
         </div>
         {%- endif %}
+        {% if secondaryNavigation %}
+        {% include 'partials/components/secondary-navigation.njk' %}
+        {% endif %}
     </article>
 {% endblock %}
