--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -331,6 +331,77 @@
   }
 }
 
+.nav--secondary {
+  background: var(--indigo-200);
+  padding: 2.5rem 1.5rem;
+}
+
+.menu--secondary a {
+  align-items: center;
+  border-bottom: 0.0625rem solid var(--true-black);
+  display: block;
+  display: flex;
+  flex-direction: row;
+  height: 3.125rem;
+  justify-content: space-between;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    background: var(--indigo-900);
+    border-bottom-color: transparent;
+    box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-900), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-900);
+    color: var(--white);
+  }
+
+  &:active {
+    background: var(--indigo-400);
+    box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-400), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-400);
+  }
+
+  &::after {
+    background: currentColor;
+    content: "";
+    display: inline-block;
+    height: 1.5em;
+    margin-left: 0.125em;
+    mask-position: center;
+    mask-repeat: no-repeat;
+    mask-size: 1.5em;
+  }
+
+  &:not([rel="external"])::after {
+    margin-bottom: 0;
+    mask-image: url('../images/internal.svg');
+    width: 1em;
+  }
+
+  &[rel~="external"]::after,
+  &[href^="mailto:"]::after {
+    margin-bottom: 0.125em;
+    mask-image: url('../images/external.svg');
+    width: 1.5em;
+  }
+
+  &[aria-current="page"],
+  &[data-parent="true"] {
+    border-bottom-color: var(--indigo-400);
+    box-shadow: inset 0 -0.0625rem 0 0 var(--indigo-400);
+    font-weight: var(--fw-bold);
+
+    &:hover,
+    &:focus {
+      border-bottom-color: transparent;
+      box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-900), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-900);
+    }
+
+    &:active {
+      border-bottom-color: transparent;
+      box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-400), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-400);
+    }
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .nav {
     height: 5rem;
@@ -622,5 +693,12 @@
         }
       }
     }
+  }
+
+  .nav--secondary {
+    box-shadow: 0.5625rem 0.5625rem 0 0 var(--indigo-400);
+    float: left;
+    margin: 6rem 0 0 3rem;
+    width: calc(1 / 3 * (100% - 6rem));
   }
 }
