--- a/src/scss/pages/_generic.scss
+++ b/src/scss/pages/_generic.scss
@@ -54,8 +54,9 @@ article header .intro {
   padding: 3rem 0;
 
   @media screen and (min-width: 1024px) {
+    float: left;
     padding: 6rem 0;
-    width: calc(2 / 3 * 100%);
+    width: calc(2 / 3 * (100% - 6rem) + 3rem);
   }
 }
 
