feat: add secondary navigation (resolves #61) (#69)
* feat: add secondary navigation (resolves #61)

* feat: add navigation to team page

--- a/src/_includes/layouts/page--team.njk
+++ b/src/_includes/layouts/page--team.njk
@@ -18,5 +18,8 @@
                 </div>
             </div>
         </div>
+        {% if secondaryNavigation %}
+        {% include 'partials/components/secondary-navigation.njk' %}
+        {% endif %}
     </article>
 {% endblock %}
