--- a/src/scss/pages/_history.scss
+++ b/src/scss/pages/_history.scss
@@ -4,6 +4,7 @@
 }
 
 .line {
+  color: transparentize($indigo-400, 0.5);
   left: 0;
   position: absolute;
   top: 1rem;
@@ -14,12 +15,13 @@
 }
 
 .milestones dt {
+  font-family: var(--ff-display);
   font-size: var(--step-2);
   position: relative;
 }
 
 .milestones dt::before {
-  background: var(--grey-200);
+  background: var(--indigo-400);
   border-radius: 50%;
   content: "";
   display: block;
@@ -31,7 +33,7 @@
 }
 
 .milestones dt.major::before {
-  background: var(--grey-300);
+  background: var(--indigo-900);
   height: 1.25rem;
   left: -45px;
   top: 0.5rem;
