fix: add sidebar to history

--- a/src/_includes/layouts/history.njk
+++ b/src/_includes/layouts/history.njk
@@ -28,5 +28,8 @@
                 {% endif %}
             </div>
         </div>
+        {% if secondaryNavigation %}
+        {% include 'partials/components/secondary-navigation.njk' %}
+        {% endif %}
     </article>
 {% endblock %}
