feat: update colour system (resolves #71)

--- a/src/_includes/layouts/preview.njk
+++ b/src/_includes/layouts/preview.njk
@@ -8,9 +8,9 @@
             {% if headerTextColor %}
                 --header-fg: var(--{{ headerTextColor }});
             {% endif %}
-            {% if headerBgColor === 'blue-500' or headerBgColor === 'blue-100' or headerBgColor === 'red-500' or headerBgColor === 'yellow-500' %}
+            {% if headerBgColor === 'blue-500' or headerBgColor === 'blue-100' or headerBgColor === 'coral-500' or headerBgColor === 'yellow-500' %}
                 {% set headerAccentColor = 'white' %}
-            {% elif headerBgColor === 'indigo-900' %}
+            {% elif headerBgColor === 'indigo-800' %}
                 {% set headerAccentColor = 'indigo-500' %}
             {% endif %}
                 --header-accent: var(--{{ headerAccentColor }}, var(--yellow-500));
