--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -106,12 +106,12 @@ blockquote {
   }
 }
 
-.section.section--bg-indigo-900 {
+.section.section--bg-indigo-800 {
   --accent: var(--indigo-500);
 }
 
 .section.section--bg-blue-500,
-.section.section--bg-red-500,
+.section.section--bg-coral-500,
 .section.section--bg-yellow-500 {
   --accent: var(--white);
 }
