--- a/src/scss/pages/_generic.scss
+++ b/src/scss/pages/_generic.scss
@@ -84,7 +84,7 @@ article .content .inner {
 
 .section {
   background: var(--indigo-100);
-  color: var(--black);
+  color: var(--blue-900);
   padding-bottom: 5rem;
   padding-top: 5rem;
 }
@@ -126,8 +126,8 @@ article .content .inner {
   box-shadow: 1.5rem 1.5rem var(--indigo-500);
 }
 
-.section figure.shadow-red-500 {
-  box-shadow: 1.5rem 1.5rem var(--red-500);
+.section figure.shadow-coral-500 {
+  box-shadow: 1.5rem 1.5rem var(--coral-500);
 }
 
 .section figure.shadow-yellow-500 {
