--- a/src/scss/components/_brand.scss
+++ b/src/scss/components/_brand.scss
@@ -8,7 +8,7 @@
 
   &:hover,
   &:focus {
-    background: var(--true-black);
+    background: var(--black);
     color: var(--white);
   }
 
@@ -49,17 +49,17 @@
 
 .page--home {
   .brand {
-    color: var(--logo);
+    color: var(--blue-500);
     width: 4.5rem;
 
     &:hover,
     &:focus {
-      background: var(--logo);
+      background: var(--blue-500);
       color: var(--white);
     }
 
     &:active {
-      background: transparentize($logo, 0.3);
+      background: transparentize($blue-500, 0.3);
     }
   }
 
@@ -80,11 +80,11 @@
     &:hover,
     &:focus {
       background: var(--white);
-      color: var(--indigo-900);
+      color: var(--indigo-800);
     }
 
     &:active {
-      background: var(--indigo-1000);
+      background: var(--indigo-900);
       color: var(--white);
     }
   }
