--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -7,7 +7,7 @@
 .nav .menu-toggle {
   background: var(--header-bg, transparent);
   border-radius: 3px;
-  color: var(--black);
+  color: var(--blue-900);
   height: 34px;
   line-height: 0.7;
   padding: 6px 12px;
@@ -20,11 +20,11 @@
 
   &:focus {
     background: var(--header-bg, transparent);
-    box-shadow: 0 0 0 2px var(--parent-bg), 0 0 0 4px var(--black), 0 0 0 2px var(--black) inset;
+    box-shadow: 0 0 0 2px var(--parent-bg), 0 0 0 4px var(--blue-900), 0 0 0 2px var(--blue-900) inset;
   }
 
   &:active {
-    background-color: var(--indigo-900);
+    background-color: var(--indigo-800);
     color: var(--white);
   }
 
@@ -43,7 +43,7 @@
 
     &:active {
       background: var(--indigo-200);
-      color: var(--indigo-900);
+      color: var(--indigo-800);
     }
   }
 
@@ -54,7 +54,7 @@
 }
 
 .nav .menu {
-  background: var(--indigo-900);
+  background: var(--indigo-800);
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
   color: var(--white);
   display: none;
@@ -113,11 +113,11 @@
   &:hover,
   &:focus {
     background: var(--indigo-100);
-    color: var(--indigo-900);
+    color: var(--indigo-800);
   }
 
   &:active {
-    background: var(--indigo-1000);
+    background: var(--indigo-900);
     color: var(--white);
   }
 }
@@ -130,7 +130,7 @@
 
   &:hover,
   &:focus {
-    text-decoration-color: var(--indigo-900);
+    text-decoration-color: var(--indigo-800);
   }
 }
 
@@ -140,7 +140,7 @@
 }
 
 .menu li ul a {
-  background: var(--indigo-1000);
+  background: var(--indigo-900);
   font-weight: var(--fw-normal);
 }
 
@@ -175,7 +175,7 @@
 
     &:active {
       background: var(--indigo-200);
-      color: var(--indigo-900);
+      color: var(--indigo-800);
     }
   }
 }
@@ -187,7 +187,7 @@
     }
 
     &:active {
-      background: var(--indigo-900);
+      background: var(--indigo-800);
     }
 
     &[aria-expanded="true"] {
@@ -234,11 +234,11 @@
 
   .menu a,
   .menu button {
-    color: var(--true-black);
+    color: var(--black);
 
     &:hover,
     &:focus {
-      background: var(--true-black);
+      background: var(--black);
       color: var(--white);
     }
 
@@ -290,7 +290,7 @@
 
   .menu li ul a {
     background: var(--header-bg);
-    color: var(--true-black);
+    color: var(--black);
   }
 
   .menu a[href="#"] {
@@ -309,11 +309,11 @@
       &:hover,
       &:focus {
         background: var(--indigo-100);
-        color: var(--indigo-900);
+        color: var(--indigo-800);
       }
 
       &:active {
-        background: var(--indigo-1000);
+        background: var(--indigo-900);
         color: var(--white);
       }
     }
@@ -330,18 +330,18 @@
       &:hover,
       &:focus {
         background: var(--blue-500);
-        color: var(--true-black);
+        color: var(--black);
       }
 
       &:active {
         background: transparentize($blue-500, 0.5);
-        color: var(--true-black);
+        color: var(--black);
       }
     }
 
     .menu li ul a {
       background: var(--header-bg);
-      color: var(--true-black);
+      color: var(--black);
     }
   }
 }
@@ -353,7 +353,7 @@
 
 .menu--secondary a {
   align-items: center;
-  border-bottom: 0.0625rem solid var(--true-black);
+  border-bottom: 0.0625rem solid var(--black);
   display: block;
   display: flex;
   flex-direction: row;
@@ -363,15 +363,15 @@
 
   &:hover,
   &:focus {
-    background: var(--indigo-900);
+    background: var(--indigo-800);
     border-bottom-color: transparent;
-    box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-900), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-900);
+    box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-800), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-800);
     color: var(--white);
   }
 
   &:active {
-    background: var(--indigo-400);
-    box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-400), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-400);
+    background: var(--indigo-500);
+    box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-500), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-500);
   }
 
   &::after {
@@ -400,19 +400,19 @@
 
   &[aria-current="page"],
   &[data-parent="true"] {
-    border-bottom-color: var(--indigo-400);
-    box-shadow: inset 0 -0.0625rem 0 0 var(--indigo-400);
+    border-bottom-color: var(--indigo-500);
+    box-shadow: inset 0 -0.0625rem 0 0 var(--indigo-500);
     font-weight: var(--fw-bold);
 
     &:hover,
     &:focus {
       border-bottom-color: transparent;
-      box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-900), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-900);
+      box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-800), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-800);
     }
 
     &:active {
       border-bottom-color: transparent;
-      box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-400), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-400);
+      box-shadow: -1.5rem -0.0625rem 0 0.0625rem var(--indigo-500), 1.5rem -0.0625rem 0 0.0625rem var(--indigo-500);
     }
   }
 }
@@ -468,7 +468,7 @@
   .menu a,
   .menu button {
     align-items: center;
-    color: var(--black);
+    color: var(--blue-900);
     display: flex;
     font-weight: var(--fw-medium);
     height: 5rem;
@@ -476,7 +476,7 @@
 
     &:hover,
     &:focus {
-      background: var(--true-black);
+      background: var(--black);
       color: var(--white);
     }
 
@@ -487,14 +487,14 @@
   }
 
   .menu [aria-expanded="true"] {
-    background: var(--true-black);
+    background: var(--black);
     color: var(--white);
   }
 
   .menu [aria-current="page"],
   .menu [data-parent="true"] {
     text-decoration: underline;
-    text-decoration-color: var(--true-black);
+    text-decoration-color: var(--black);
     text-decoration-thickness: 2px;
     text-underline-offset: 0.3125rem;
 
@@ -506,7 +506,7 @@
 
   .menu li ul a {
     background: var(--white);
-    color: var(--true-black);
+    color: var(--black);
     font-weight: var(--fw-normal);
     height: unset;
     min-height: 3.125rem;
@@ -515,7 +515,7 @@
     &:hover,
     &:focus {
       background: var(--yellow-500);
-      color: var(--true-black);
+      color: var(--black);
     }
 
     &:active {
@@ -525,7 +525,7 @@
     &[aria-current="page"] {
       &:hover,
       &:focus {
-        text-decoration-color: var(--true-black);
+        text-decoration-color: var(--black);
       }
     }
   }
@@ -537,7 +537,7 @@
 
       &:hover,
       &:focus {
-        background: var(--true-black);
+        background: var(--black);
       }
 
       &:active {
@@ -547,12 +547,12 @@
 
     .menu li ul a {
       background: var(--white);
-      color: var(--true-black);
+      color: var(--black);
 
       &:hover,
       &:focus {
         background: var(--yellow-500);
-        color: var(--true-black);
+        color: var(--black);
       }
 
       &:active {
@@ -567,25 +567,25 @@
       &:hover,
       &:focus {
         background: var(--blue-500);
-        color: var(--true-black);
+        color: var(--black);
       }
 
       &:active {
         background: transparentize($blue-500, 0.5);
-        color: var(--true-black);
+        color: var(--black);
       }
     }
 
     .menu [aria-expanded="true"] {
       background: var(--blue-500);
-      color: var(--true-black);
+      color: var(--black);
     }
 
     .menu li ul a {
       &:hover,
       &:focus {
         background: var(--yellow-500);
-        color: var(--true-black);
+        color: var(--black);
       }
 
       &:active {
@@ -642,7 +642,7 @@
       &:hover,
       &:focus {
         background: var(--yellow-500);
-        color: var(--true-black);
+        color: var(--black);
       }
     }
 
@@ -662,7 +662,7 @@
 
       &:hover,
       &:focus {
-        text-decoration-color: var(--true-black);
+        text-decoration-color: var(--black);
       }
     }
 
@@ -700,7 +700,7 @@
         &:hover,
         &:focus {
           background: var(--yellow-500);
-          color: var(--true-black);
+          color: var(--black);
         }
 
         &:active {
@@ -711,7 +711,7 @@
   }
 
   .nav--secondary {
-    box-shadow: 0.5625rem 0.5625rem 0 0 var(--indigo-400);
+    box-shadow: 0.5625rem 0.5625rem 0 0 var(--indigo-500);
     float: left;
     margin: 6rem 0 0 3rem;
     width: calc(1 / 3 * (100% - 6rem));
