feat: integrate Indigo 200

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -6,7 +6,7 @@ $black: #000;
 $white: #fff;
 $grey-100: #c4c4c4;
 $indigo-100: #f8fbff;
-$indigo-200: #e2edfc; // TODO
+$indigo-200: #e2edfc;
 $indigo-500: #5a67d8;
 $indigo-800: #3c366b;
 $indigo-900: #251f50;
