feat: expand greys

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -4,7 +4,8 @@
 
 $black: #000;
 $white: #fff;
-$grey-100: #c4c4c4;
+$grey-100: #f2f2f2;
+$grey-200: #c4c4c4;
 $indigo-100: #f8fbff;
 $indigo-200: #e2edfc;
 $indigo-500: #5a67d8;
@@ -22,6 +23,7 @@ $colors: (
   'black': $black,
   'white': $white,
   'grey-100': $grey-100,
+  'grey-200': $grey-200,
   'indigo-100': $indigo-100,
   'indigo-200': $indigo-200,
   'indigo-500': $indigo-500,
