fix: add maskable icon

--- a/src/manifest.njk
+++ b/src/manifest.njk
@@ -12,6 +12,12 @@ permalink: "/manifest.webmanifest"
       "sizes": "192x192"
     },
     {
+      "src": "/images/icon-maskable.png",
+      "type": "image/png",
+      "sizes": "853x853",
+      "purpose": "any maskable"
+    },
+    {
       "src": "/images/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
