Revert "feat: add default offline page"
e9e27d241c5b359dff8815807b3ee8437f24e3d5

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -301,8 +301,7 @@
     font-weight: var(--fw-semibold);
   }
 
-  .page--404,
-  .page--offline {
+  .page--404 {
     .menu a,
     .menu button {
       color: var(--white);
@@ -531,8 +530,7 @@
     }
   }
 
-  .page--404,
-  .page--offline {
+  .page--404 {
     .menu a,
     .menu button {
       color: var(--white);
