--- a/src/_includes/partials/components/news-grid-item.njk
+++ b/src/_includes/partials/components/news-grid-item.njk
@@ -1,6 +1,5 @@
 <article class="entry">
-    <span class="hr"></span>
-    <h2><a href="{{ item.url }}">{{ item.data.title }}</a></h2>
+    <h2 class="h3"><a href="{{ item.url }}">{{ item.data.title }}</a></h2>
     <p class="metadata">
         By {{ item.data.author if item.data.author else 'IDRC Team' }}
         <span class="separator" aria-hidden="true">&middot;</span>
