--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -713,7 +713,7 @@
   .nav--secondary {
     box-shadow: 0.5625rem 0.5625rem 0 0 var(--indigo-500);
     float: left;
-    margin: 6rem 0 0 3rem;
+    margin: 6rem 0 6rem 3rem;
     width: calc(1 / 3 * (100% - 6rem));
   }
 }
